--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
-/node_modules
-/backend/node_modules
+# Node.js dependencies
+node_modules/
+backend/node_modules/
+
+# Environment variables
 .env
+
+# Python cache files
+__pycache__/
+
+# Python virtual environments
+/YTB
+Scripts/
+Lib/
+
+# Project-specific directories
+genai/
+langchain/
