--- a/Frontend-GenAI/.gitignore
+++ b/Frontend-GenAI/.gitignore
@@ -4,7 +4,8 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-<<<<<<< HEAD
+./node_modules
+./pycache
 lerna-debug.log*
 .pnpm-debug.log*
 
@@ -129,23 +130,3 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
-=======
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
->>>>>>> 4300c2ab0d3f6258e43ceacda2602f00f08e4cb6
