--- a/Frontend-GenAI/package.json
+++ b/Frontend-GenAI/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.16.0",
+    "@headlessui/react": "^2.1.2",
     "@hookform/resolvers": "^3.9.0",
     "axios": "^1.7.2",
     "bbq-ieee": "file:",
@@ -23,6 +24,8 @@
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
+    "react-speech-recognition": "^3.10.0",
+    "tesseract.js": "^5.1.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
