--- a/genai/requirements.txt
+++ b/genai/requirements.txt
@@ -3,9 +3,10 @@ torch
 langchain-core
 langchain-community
 pypdf
-chromadb==0.3.29
 sentence-transformers==2.2.2
 python-dotenv
 InstructorEmbedding
 pyproject-toml
 python-multipart
+tokenizers==0.19.0
+chromadb==0.3.29
