--- a/Frontend-GenAI/package.json
+++ b/Frontend-GenAI/package.json
@@ -20,6 +20,7 @@
     "bbq-sih-1631": "file:",
     "dotenv": "^16.4.5",
     "IEEE": "file:",
+    "microsoft-cognitiveservices-speech-sdk": "^1.40.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.2",
