--- a/Frontend-GenAI/package.json
+++ b/Frontend-GenAI/package.json
@@ -18,10 +18,12 @@
     "bbq-ieee": "file:",
     "BBQ-IEEE": "file:",
     "bbq-sih-1631": "file:",
+    "chart.js": "^4.4.4",
     "dotenv": "^16.4.5",
     "IEEE": "file:",
     "microsoft-cognitiveservices-speech-sdk": "^1.40.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
