fix: nvidia->groq

--- a/genai/requirements.txt
+++ b/genai/requirements.txt
@@ -2,12 +2,11 @@ fastapi
 torch
 langchain-core
 langchain-community
-langchain-nvidia-ai-endpoints
-pypdf
+groq
+pyMupdf
 sentence-transformers==2.2.2
 python-dotenv
 InstructorEmbedding
 pyproject-toml
 python-multipart
 tokenizers==0.19.0
-chromadb==0.3.29
