--- a/Frontend-GenAI/package.json
+++ b/Frontend-GenAI/package.json
@@ -14,18 +14,22 @@
     "@headlessui/react": "^2.1.2",
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^5.16.7",
+    "@react-three/drei": "^9.120.4",
+    "@react-three/fiber": "^8.17.10",
     "axios": "^1.7.2",
     "bbq-sih-1631": "file:",
     "chart.js": "^4.4.4",
     "dotenv": "^16.4.5",
     "IEEE": "file:",
     "microsoft-cognitiveservices-speech-sdk": "^1.40.0",
+    "photo-sphere-viewer": "^4.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.0",
+    "react-pannellum": "^0.2.16",
+    "react-router-dom": "^6.28.1",
     "react-speech-recognition": "^3.10.0",
     "tesseract.js": "^5.1.0",
     "yup": "^1.4.0"
