--- a/genai/requirements.txt
+++ b/genai/requirements.txt
@@ -1,163 +1,95 @@
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.13
 aiosignal==1.3.2
 annotated-types==0.7.0
-anyio==4.7.0
-asgiref==3.8.1
+anyio==4.8.0
 async-timeout==4.0.3
-attrs==24.3.0
-backoff==2.2.1
-bcrypt==4.2.1
-beautifulsoup4==4.12.3
-build==1.2.2.post1
-cachetools==5.5.0
-certifi==2024.12.14
-chardet==5.2.0
+attrs==25.3.0
+certifi==2025.1.31
 charset-normalizer==3.4.1
-chroma-hnswlib==0.7.6
-chromadb==0.5.15
 click==8.1.8
-colorama==0.4.6
-coloredlogs==15.0.1
 dataclasses-json==0.6.7
-Deprecated==1.2.15
 distro==1.9.0
-durationpy==0.9
-educhain==0.3.4
 exceptiongroup==1.2.2
-faiss-cpu==1.9.0.post1
-fastapi==0.115.6
-filelock==3.16.1
-flatbuffers==24.12.23
+faiss-cpu==1.10.0
+fastapi==0.115.11
+filelock==3.18.0
 frozenlist==1.5.0
-fsspec==2024.12.0
-google-ai-generativelanguage==0.6.10
-google-api-core==2.24.0
-google-api-python-client==2.156.0
-google-auth==2.37.0
-google-auth-httplib2==0.2.0
-google-generativeai==0.8.3
-googleapis-common-protos==1.66.0
+fsspec==2025.3.0
 greenlet==3.1.1
-groq==0.13.1
-grpcio==1.68.1
-grpcio-status==1.68.1
+groq==0.19.0
 h11==0.14.0
 httpcore==1.0.7
-httplib2==0.22.0
-httptools==0.6.4
 httpx==0.28.1
 httpx-sse==0.4.0
-huggingface-hub==0.25.2
-humanfriendly==10.0
+huggingface-hub==0.29.3
 idna==3.10
-importlib_metadata==8.4.0
-importlib_resources==6.4.5
 InstructorEmbedding==1.0.1
-Jinja2==3.1.5
-jiter==0.8.2
+Jinja2==3.1.6
 joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
-kubernetes==31.0.0
-langchain==0.3.4
-langchain-community==0.3.3
-langchain-core==0.3.28
-langchain-groq==0.2.2
-langchain-openai==0.2.11
-langchain-text-splitters==0.3.4
-langsmith==0.1.147
-markdown-it-py==3.0.0
+langchain==0.3.20
+langchain-community==0.3.19
+langchain-core==0.3.45
+langchain-groq==0.2.5
+langchain-text-splitters==0.3.6
+langsmith==0.3.15
 MarkupSafe==3.0.2
-marshmallow==3.23.2
-mdurl==0.1.2
-mmh3==5.0.1
-monotonic==1.6
+marshmallow==3.26.1
 mpmath==1.3.0
 multidict==6.1.0
 mypy-extensions==1.0.0
-networkx==3.2.1
+networkx==3.4.2
 nltk==3.9.1
-numpy==1.26.4
-oauthlib==3.2.2
-onnxruntime==1.19.2
-openai==1.57.0
-opentelemetry-api==1.27.0
-opentelemetry-exporter-otlp-proto-common==1.27.0
-opentelemetry-exporter-otlp-proto-grpc==1.27.0
-opentelemetry-instrumentation==0.48b0
-opentelemetry-instrumentation-asgi==0.48b0
-opentelemetry-instrumentation-fastapi==0.48b0
-opentelemetry-proto==1.27.0
-opentelemetry-sdk==1.27.0
-opentelemetry-semantic-conventions==0.48b0
-opentelemetry-util-http==0.48b0
-orjson==3.10.12
-overrides==7.7.0
+numpy==2.2.3
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+orjson==3.10.15
 packaging==24.2
-pandas==2.2.3
-pillow==11.0.0
-posthog==3.7.4
-propcache==0.2.1
-proto-plus==1.25.0
-protobuf==5.29.2
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pydantic==2.9.2
-pydantic-settings==2.7.0
-pydantic_core==2.23.4
-Pygments==2.18.0
-PyMuPDF==1.25.1
-pyparsing==3.2.0
-PyPDF2==3.0.1
-PyPika==0.48.9
-pyproject-toml==0.1.0
-pyproject_hooks==1.2.0
-pyreadline3==3.5.4
-python-dateutil==2.9.0.post0
+pillow==11.1.0
+propcache==0.3.0
+pydantic==2.10.6
+pydantic-settings==2.8.1
+pydantic_core==2.27.2
+PyMuPDF==1.25.4
 python-dotenv==1.0.1
 python-multipart==0.0.20
-pytz==2024.2
 PyYAML==6.0.2
 regex==2024.11.6
-reportlab==4.2.5
 requests==2.32.3
-requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
-rich==13.9.4
-rsa==4.9
-safetensors==0.4.5
-scikit-learn==1.6.0
-scipy==1.13.1
-sentence-transformers==2.2.2
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+sentence-transformers==3.4.1
 sentencepiece==0.2.0
-shellingham==1.5.4
-six==1.17.0
 sniffio==1.3.1
-soupsieve==2.6
-SQLAlchemy==2.0.36
-starlette==0.41.3
+SQLAlchemy==2.0.39
+starlette==0.46.1
 sympy==1.13.1
 tenacity==9.0.0
-threadpoolctl==3.5.0
-tiktoken==0.8.0
-tokenizers==0.19.0
-tomli==2.2.1
-torch==2.5.1
-torchvision==0.20.1
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+torch==2.6.0
+torchvision==0.21.0
 tqdm==4.67.1
-transformers==4.44.2
-typer==0.15.1
+transformers==4.49.0
+triton==3.2.0
 typing-inspect==0.9.0
 typing_extensions==4.12.2
-tzdata==2024.2
-uritemplate==4.1.1
 urllib3==2.3.0
 uvicorn==0.34.0
-watchfiles==1.0.3
-websocket-client==1.8.0
-websockets==14.1
-wrapt==1.17.0
 yarl==1.18.3
-youtube-transcript-api==0.6.2
-zipp==3.21.0
+zstandard==0.23.0
