--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,13 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cloudinary": "^2.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
+    "multer": "^2.0.2",
     "server": "file:"
   },
   "devDependencies": {
