--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node server.js",
+    "dev": "nodemon server.js",
     "start": "node server.js"
   },
   "keywords": [],
@@ -20,6 +20,7 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
     "multer": "^2.0.2",
+    "nodemon": "^3.1.11",
     "server": "file:"
   },
   "devDependencies": {
