--- a/Frontend-GenAI/package.json
+++ b/Frontend-GenAI/package.json
@@ -31,6 +31,7 @@
     "react-pannellum": "^0.2.16",
     "react-router-dom": "^6.28.1",
     "react-speech-recognition": "^3.10.0",
+    "socket.io-client": "^4.8.3",
     "tesseract.js": "^5.1.0",
     "yup": "^1.4.0"
   },
