--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,9 @@
     "mongoose": "^8.5.1",
     "multer": "^2.0.2",
     "nodemon": "^3.1.11",
-    "server": "file:"
+    "server": "file:",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
